
Those wishing to use the latest code instead of a branch release can obtain
it from source control: http://www.mediawiki.org/wiki/Download_from_SVN

=== Configuration changes in 1.17 ===
* (bug 12797) Allow adjusting of default gallery display options:
  $wgGalleryImagesPerRow, $wgGalleryImageWidth, $wgGalleryImageHeight
  $wgGalleryCaptionLength, $wgGalleryShowBytes
  
=== New features in 1.17 ===
  
=== Bug fixes in 1.17 ===
* (bug 17560) Half-broken deletion moved image files to deletion archive without
  updating DB
* (bug 22666) Submitting user block form with an invalid user name no longer
  throws an error
* (bugs 22665 and 22667) User '0' can now be unblocked and have its block
  settings changed
* (bug 22606) The body of e-mail address confirmation message is now different
  when the address changed
* (bug 22664) Special:Userrights now accepts '0' as a valid user name
* (bug 5210) preload parser now parses <noinclude>, <includeonly> and redirects
* (bug 22709) IIS7 mishandles redirects generated by OutputPage::output() when 
the URL contains a colon.

== API changes in 1.17 ==

=== Languages updated in 1.17 ===

== Compatibility ==

MediaWiki 1.17 requires PHP 5.1 (5.2 recommended). PHP 4 is no longer supported.

MySQL 3.23.x is no longer supported; some older hosts may need to upgrade.
At this time we still recommend 4.0, but 4.1/5.0 will work fine in most cases.


== Upgrading ==

1.17 has several database changes since 1.16, and will not work without schema
updates.

If upgrading from before 1.11, and you are using a wiki as a commons reposito-
ry, make sure that it is updated as well. Otherwise, errors may arise due to
database schema changes.

If upgrading from before 1.7, you may want to run refreshLinks.php to ensure
new database fields are filled with data.

If you are upgrading from MediaWiki 1.4.x or earlier, some major database
changes are made, and there is a slightly higher chance that things could