@@ -22,6 +22,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 12797) Allow adjusting of default gallery display options:
   $wgGalleryImagesPerRow, $wgGalleryImageWidth, $wgGalleryImageHeight
   $wgGalleryCaptionLength, $wgGalleryShowBytes
+* DatabaseFunctions.php that was needed for compatibility with pre-1.3 extensions
+  has been removed.
   
 === New features in 1.17 ===
   
